# FIFA2026_RH

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
analysis/: phase0_lineup_ceiling.py
data/: wc2026_accuracy.json  wc2026_market.json  wc2026_predictions_frozen.json  wc2026_results_manual.json
docs/: 5B_lineup_data_sources.md  AUTONOMOUS_UPGRADE.md  model_dispersion_findings_20260613.txt  upgrade_log.md
scripts/: accuracy_daemon.sh  analyze_market.py  com.redfootball.accuracy-refresh.plist  export_portal_data.py  freeze_predictions.py  measure_scoreline.py  refresh_accuracy.sh  refresh_wc2026_site.py  run_wc2026_upgrade_loop.sh  score_predictions.py  snapshot_market.sh  start_wc2026_upgrade_daemon.sh  stop_accuracy_daemon.sh  stop_wc2026_upgrade_daemon.sh
site/: deploy.sh  deploy_on_server.sh  index.html  index.template.html
site/portal/: README.md  build.sh  index.html
site/portal/assets/: Charts.js  accuracy.js  api.js  app.js  bracket.js  data.js  dc.js  engine.js  fixtures.js  market.js  marketscan.js  polymarket.js  sections1.js  sections2.js  sections3.js  sections4.js  sections5.js  sections6.js  sections7.js  sections8.js  sponsors.js  tokens.css
site/portal/src/: Charts.jsx  app.jsx  sections1.jsx  sections2.jsx  (+5 more)
src/wcpredict/: __init__.py  cli.py  config.py  features.py  registry.py
tests/: test_backtest.py  test_confederation.py  test_data_sources.py  test_devig.py  test_dixon_coles.py  test_markets.py  test_metrics.py  test_polymarket.py  test_ratings.py  test_registry.py  test_service.py  test_tournament.py  test_wc2026.py  test_xg.py
(+30 files in other folders)
